...
                  ],
                ),
                child: TextFormField(
                  controller: nombreController,
                  validator: validarNombre,
                  decoration: InputDecoration(
                    labelText: "Nombre",
                    prefixIcon: Icon(
                      Icons.person,
                      color: Color.fromARGB(255, 70, 117, 192),
                    ),
                    labelStyle: GoogleFonts.montserrat(),
                    border: InputBorder.none,
...
                ),
                child: TextFormField(
                  controller: emailController,
                  validator: validarCorreo,
                  keyboardType: TextInputType.emailAddress,
                  decoration: InputDecoration(
                    labelText: "Email",
                    prefixIcon: Icon(Icons.email, color: Color(0xFF6A1B9A)),
                    labelStyle: GoogleFonts.montserrat(),
                    border: InputBorder.none,
                  ),
                ),
              ),
...
                  ),
                  style: GoogleFonts.montserrat(color: Colors.black),
                  items: const [
                    DropdownMenuItem(value: 'admin', child: Text('Admin')),
                    DropdownMenuItem(
                      value: 'voluntario',
                      child: Text('Voluntario'),
                    ),
                  ],
                  onChanged: (value) => rolController.text = value!,
                ),
              ),

...
                      backgroundColor: const Color(0xFF6A1B9A),
                      shape: RoundedRectangleBorder(
                        borderRadius: BorderRadius.circular(12),
                      ),
                    ),
                    child: Text(
                      "Guardar",
                      style: GoogleFonts.montserrat(color: Colors.white),
                    ),
                  ),
                ],
              ),
            ],
...
              child: Form(
                key: formKey,
                child: Column(
                  mainAxisSize: MainAxisSize.min,
                  children: [
                    Text(
                      'Nuevo Usuario',
                      style: GoogleFonts.montserrat(
                        fontSize: 20,
                        fontWeight: FontWeight.bold,
                      ),
                    ),
                    const SizedBox(height: 20),
...
                          if (value.length < 6) {
                            return 'Debe tener al menos 6 caracteres';
                          }
                          return null;
                        },
                        decoration: InputDecoration(
                          labelText: "Contraseña",
                          prefixIcon: const Icon(
                            Icons.lock,
                            color: Colors.amber,
                          ),
                          suffixIcon: IconButton(
                            icon: Icon(
...
                                                    ),
                                              ),
                                              onPressed:
                                                  () =>
                                                      Navigator.pop(ctx, true),
                                              child: Text(
                                                'Eliminar',
                                                style: GoogleFonts.montserrat(
                                                  color: Colors.white,
                                                ),
                                              ),
                                            ),
                                          ],
...
